--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -812,6 +812,18 @@ select.form-control.has-value {
     .pb-100 {
         padding-bottom: 55px;
     }
+
+    .ptb-50 {
+        padding: 45px 0;
+    }
+
+    .pt-50 {
+        padding-top: 45px;
+    }
+
+    .pb-50 {
+        padding-bottom: 45px;
+    }
 }
 
 @media (min-width: 992px) {
